Update Grafana dashboards and datasource name

--- a/services/grafana/provisioning/datasources/influxdb.yml
+++ b/services/grafana/provisioning/datasources/influxdb.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 datasources:
-  - name: NR7101 InfluxDB
+  - name: NR7101
   - type: influxdb
   - url: http://influxdb:8086
   - database: nr7101
