Use InfluxDB v2 for MacOS M1 with InfluxdDB V1 compatibility

--- a/services/grafana/provisioning/datasources/influxdb.yml
+++ b/services/grafana/provisioning/datasources/influxdb.yml
@@ -5,6 +5,11 @@ datasources:
     type: influxdb
     url: http://influxdb:8086
     database: nr7101
+    user: nr7101
+    jsonData:
+      httpMethod: POST
+    secureJsonData:
+      password: nr7101password
     access: proxy
     editable: true
     isDefault: true
