--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -2,25 +2,23 @@ version: '3.5'
 services:
   influxdb:
     container_name: nr7101-collector-influxdb
-    image: influxdb:1.8.6-alpine
+    image: arm64v8/influxdb:2.0.7
     ports:
       - 8086:8086
     volumes:
-      - influxdb:/var/lib/influxdb
-
-  influxdb_start:
-    image: dadarek/wait-for-dependencies
-    depends_on:
-      - influxdb
-    command: 'influxdb:8086'
-
-  influxdb_init:
-    image: influxdb:1.8.6-alpine
-    restart: 'no'
-    depends_on:
-      - influxdb_start
-    command: ['influx', '-host', 'influxdb', '-execute', 'CREATE DATABASE "nr7101"']
-
+      - influxdb:/var/lib/influxdb2
+      - ./setup-v1.sh:/docker-entrypoint-initdb.d/setup-v1.sh
+    environment:
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=nr7101
+      - DOCKER_INFLUXDB_INIT_PASSWORD=nr7101password
+      - DOCKER_INFLUXDB_INIT_ORG=nr7101
+      - DOCKER_INFLUXDB_INIT_BUCKET=nr7101
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=nr7101token
+      - V1_DB_NAME=nr7101
+      - V1_RP_NAME=autogen
+      - V1_AUTH_USERNAME=nr7101
+      - V1_AUTH_PASSWORD=nr7101password
 
   grafana:
     container_name: nr7101-collector-grafana
@@ -29,8 +27,6 @@ services:
       - 3000:3000
     volumes:
       - grafana:/var/lib/grafana
-    depends_on:
-      - influxdb_start
 
 volumes:
   influxdb:
